# daal

./: WORKSPACE
cpp/daal/: BUILD.bazel  bazel-install.sh  makefile
cpp/daal/include/services/internal/: buffer_impl_sycl.h
cpp/oneapi/dal/detail/: common.cpp
cpp/onedal/: BUILD  BUILD.bazel  array.hpp  common.hpp  common_helpers.hpp  dparray.hpp  dparray_test.cpp  table.cpp  table.hpp  table_builder.cpp  table_builder.hpp  table_builder_test.cpp  table_metadata.cpp  table_metadata.hpp  table_test.cpp  type_traits.hpp
cpp/onedal/backend/: homogen_table_impl.cpp  homogen_table_impl.hpp
cpp/onedal/data_management/: table.cpp  table.hpp
cpp/onedal/data_management/internal/: table_impl.hpp
cpp/onedal/decomposition/: pca.hpp
cpp/onedal/decomposition/pca/: params.cpp  params.hpp
cpp/onedal/decomposition/pca/internal/: params_impl.hpp
cpp/onedal/detail/: table_impl_iface.hpp  table_impl_wrapper.hpp
cpp/onedal/examples/: BUILD.bazel  pca.cpp
cpp/onedal/service/: integral_types.hpp
cpp/onedal/service/internal/: pimpl.hpp
